versioned_docs/version-15.x/01.uSync/40.reference/01.config.md
---
title: appsettings.config
---

:::tip
For Umbraco v.9 and above, all configuration lives in the `appsettings.json` file.
:::

The majority of these settings will have default values that do not need to be changed.

```json title="appsettings.json"
{
    "uSync": {
        "Settings": {
            "RootFolder": "uSync/v9/",
            "DefaultSet": "Default",
            "ImportAtStartup": "None",
            "ExportAtStartup": "None",
            "ExportOnSave": "All",
            "UiEnabledGroups": "All",
            "ReportDebug": false,
            "AddOnPing": true,
            "FailOnMissingParent": false,
            "CacheFolderKeys": true,
            "ShowVersionCheckWarning": true,
            "CustomMappings": {},
            "EnableHistory": true,
            "BackgroundNotifications": false,
        },
        "Sets": {
            "Default": {
                "Enabled": true,
                "HandlerGroups": [],
                "DisabledHandlers": [],
                "HandlerDefaults": {
                    "Enabled": true,
                    "Actions": [],
                    "UseFlatStructure": true,
                    "GuidNames": false,
                    "FailOnMissingParent": false,
                    "Group": "",
                    "Settings": {}
                },
                "Handlers": {}
            }
        }
    }
}
```

## uSync:Settings

### RootFolder 
<!--(Path to folderm, "uSync/v9")-->
Location in which uSync will save and read the exported files.

### Folders
Collection of folders uSync looks in when performing imports.

### IsRootSite
Sets this site to be the root site (so it will save into "uSync/root/").

### LockRoot
When locked, you can't make changes to anything that is in the root.

### LockRootTypes 
Lock specific types at root so they can't be changed in child sites. 

Specific types such as: document, media, member, dictionary-item, macro, template, document-type, media-type, data-type, member-type, member-group, relation-type forms-form, forms-prevalue, forms-datasource, and language.

### DefaultSet 
<!--(Default, Default)-->
Name of the handler set used by default.

### ImportAtStartup 
<!--| [Group](#group-values) | None |-->
Handler groups used when importing items at startup.

### ExportAtStartup 
<!--| [Group](#group-values) | None |-->
Handler groups used when exporting items at startup.

### ExportOnSave 
<!--| [Group](#group-values) | All |-->
Handler groups whose items will be exported when changes are saved in Umbraco.

### UiEnabledGroups 
<!--| [Group](#group-values) | All  |-->
Handler groups that show in the uSync dashboard.

### ReportDebug 
<!--| True/false | False |-->
Create a report while producing an export (debugging only).

### AddOnPing 
<!--| True/false | True |-->
Ping the jumoo.co.uk website to check for addons and updates.

### FailOnMissingParent 
<!--| True/False | False |-->
Should an import fail if the parent of an item is missing.

### FailOnDuplicates 
Fail if a duplicate file of same type and key is detected during the import process.

### CacheFolderKeys 
<!--| True/false | False |-->
Use a cache for the names and keys of folders during import. This increases import speeds.

### ShowVersionCheckWarning 
<!--| True/false | True |-->
Display the warning box if the current import is from an older version of uSync.

### CustomMappings 
<!--| {} | {} |-->
Custom item mappings for 3rd party or custom property editors.

### SignalRRoot
Location of SignalR hub script

### EnableHistory 
<!--| True/false | True |-->
Enable viewing the import and export history in the uSync dashboard.

### HistoryFolder
Location of the history folder.

### DefaultExtension 
Default file extension for the uSync files. 

### ImportOnFirstBoot
Import the uSync folder on the first boot.

### FirstBootGroup
Handler group(s) to run on first boot. Default is All (i.e full import)

### DisableDashboard
Disable the default dashboard (so people can't accidentally press the buttons).

### SummaryDashboard
Summerize results (for when there are loads and loads of items).

### SummaryLimit
Limit of items to display before flicking to summary view. (this is per handler)

### HideAddOns
List of addon (tabs) you don't want to show inside uSync dashboard.

### BackgroundNotifications 
<!--| True/False | False |-->
Run all notifications on background thread to speed up import processing, see [Background Notifications](../guides/background)

## Group Values
Group values can be None, All or any Settings group that you have installed on your site. The default groups are 'Settings' and 'Content'. 

*Group values can be a combination of settings groups (but all or none will override any other groups set in a list)*


### None
No groups, effectively off

### All
All groups, everything on

### Settings
Settings only (e.g Datatypes, doctypes)

### Content 
Content only (e.g media, content)

### Forms 
Umbraco Forms elements

### Users 
Users and groups

### Members 
Members and groups 

## uSync:Sets


### Enabled 
<!--| True/false | True |-->
Turn on the handler set.

### HandlerGroups 
<!--| List of groups | [] | -->
List of handler groups to include in this set.

### DisabledHandlers 
<!--| List of handlers | [] | -->
List of handlers to disable for this set.

## uSync:Sets:HandlerDefaults
Default settings for the handler, these values can be overridden for individual handlers.


### Enabled 
<!--| True/false | True | -->
Enable or disable the handler.

### Actions 
<!--| [List of actions](#action-values) | [] | -->
List of actions for which the handler is valid.

### UseFlatStructure
 <!--| True/false | True | --> 
 Use a flat file structure for the file produced by the handler. 

### GuidNames 
<!--| True/false | False | -->
Should uSync use the guid of an item as its file name. This ensures there are no clashes in names, but makes it harder to manually read what settings are in a folder.

### FailOnMissingParent 
<!--| True/false | False | -->
Should an import fail if the parent of an item is missing.

### Group 
<!--| "" | "" | -->
Override the group used for a handler. 

### Settings 
<!--| {} | {} |--> 
Specific settings for each handler, this will override the defaults.


### Action Values
Actions values determine which 'actions' a handler fires for. The handler action value can be a combination of any of the actions below.

### Report
Report any changes to items

### Import
Import items 

### Export
Export items when started via dashboard

### Save
Export items on save

### All
All of the above actions

*The default value is all actions.*



For Handler Settings, see the [Handler Docs](../reference/handlers).

